--- a/analysis_documentation_visit_scotland/analysis_and_documentation_visit_scotland.Rmd
+++ b/analysis_documentation_visit_scotland/analysis_and_documentation_visit_scotland.Rmd
@@ -57,7 +57,13 @@ Better no compare by regions?
 
 THE DAta HAs To BE Compare between 2013-2015 OR 2016 -2019. 
 
-So any question relate to  regional_domestic _tourism will be checked from 2016
+So any question relate to  regional_domestic _tourism will be checked from 2016.
+
+Some data, when there are age  there are missing other variables , I could affect the interpretation, could mix with other data to avoid this issue?
+
+
+For questions related with accommodation : "Large Urban Areas (settlements of over 125,000 people); Other Urban Areas (settlements of 10,000 to 124,999 people); Accessible Small Towns (settlements of 3,000 to 9,999 people and within 30 minutes drive of a settlement of 10,000 or more); Remote Small Towns (settlements of 3,000 to 9,999 people and with a drive time of over 30 minutes to a settlement of 10,000 or more); Accessible Rural (settlements of less than 3,000 people and within 30 minutes drive of a settlement of 10,000 or more); Remote Rural (settlements of less than 3,000 people and with a drive time of over 30 minutes to a settlement of 10,000 or more)". Also its optional and annual average, so its likely unrealistic.
+
 
 Main Questions.
 
@@ -80,7 +86,20 @@ INTRODUCTION / SLICE.
 IN 2020 JUST BEFORE THE PANDEMIC, VISIT SCOTLAND IN CONJUCTION WITH VISIT ENGLAND AND VISITWALES CHANGE THE PARAMETERS FOR RECORDING THE VISISTS.... SEE THE PDF.
 OUR INTENTION IS SHOW A GLIMPSE ABOUT HOW WAS FOR THE COUNTRY THE LAST YEAR 2019 BEFORE THE INTRODUCCTION OF THE NEW METHOD AND THE DISRUPTION CAUSED BY THE PANDEMIC AND THE LOCKDOWNS RESTRICTIONS DURING 2020,2021 AND THE BEGINING OF 2022 PLUS THE CURRENT WORLD ECONOMIC RECESSION.
 
+## Data Context/ Disclaimer/ Assumptions - Slide
+ How is the date? any ethical problem? 
+'All GB' , problems with datas related to Wales because sometimes is no well represented , better dont use England, Scotland, directly to 'All GB', also one visitor can realize more than one visits  and could lead to a misunderstanding / misinterpretation 
+dates used,  
 
+
+
+##  Definition of Tourism Activity -Slide
+
+
+
+
+
+## Tourism in Scotland. Q1 -Slide
 
 
 
